Add Task CRUD on sitemap

--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -23,7 +23,8 @@ return PhpCsFixer\Config::create()
         'no_spaces_inside_parenthesis' => true,
         'no_trailing_whitespace' => true,
         'no_trailing_whitespace_in_comment' => true,
-        'ordered_class_elements' => ['order' => ['use_trait', 'constant_public', 'constant_protected', 'constant_private', 'property_public', 'property_protected', 'property_private', 'construct', 'destruct', 'magic', 'phpunit', 'method_public', 'method_protected', 'method_private']],
+        //'ordered_class_elements' => ['order' => ['use_trait', 'constant_public', 'constant_protected', 'constant_private', 'property_public', 'property_protected', 'property_private', 'construct', 'destruct', 'magic', 'phpunit', 'method_public', 'method_protected', 'method_private']],
+        'ordered_class_elements' => false,
         'ordered_imports' => ['sortAlgorithm' => 'length'],
         'phpdoc_add_missing_param_annotation' => ['only_untyped' => true],
         'phpdoc_align' => true,
