--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -39,5 +39,6 @@ return PhpCsFixer\Config::create()
     ->setFinder(
         PhpCsFixer\Finder::create()
             ->in(__DIR__ . '/vendor/umbrella/')
+            ->in(__DIR__ . '/src/')
     )
 ;
