--- a/composer.json
+++ b/composer.json
@@ -36,6 +36,7 @@
         "umbrella/makerbundle": "dev-master"
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.3",
         "phpstan/phpstan": "^0.12.25",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.21",
