--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,5 +1,6 @@
 framework:
     default_locale: fr
+    #ide: 'phpstorm://open?url=file://%%f&line=%%l'
     translator:
         default_path: '%kernel.project_dir%/translations'
         fallbacks: fr
