--- a/config/packages/umbrella.yaml
+++ b/config/packages/umbrella.yaml
@@ -1,6 +1,12 @@
 umbrella_core:
   webpack:
     dev_server_enable: "%env(bool:WEBPACK_DEV_SERVER_ENABLE)%"
+  ckeditor:
+    configs:
+      custom:
+        toolbar:
+          - { name: links, items: [ 'Link', 'Unlink' ] }
+        uiColor: '#FEFEFE'
 
 umbrella_admin:
   menu:
