--- a/config/services.yaml
+++ b/config/services.yaml
@@ -13,3 +13,11 @@ services:
     App\Controller\:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
+
+    #Menu
+    App\Menu\CustomMenu:
+        bind:
+            $ymlPath: "%kernel.project_dir%/config/menu/admin_sidebar.yml"
+        tags:
+            - {name: umbrella.menu.factory, method: createMenu, alias: custom_menu}
+            - {name: umbrella.menu.renderer, method: renderMenu, alias: custom_menu}
