--- a/config/menu/admin_sidebar.yml
+++ b/config/menu/admin_sidebar.yml
@@ -47,9 +47,9 @@ icon:
         icon_unicon:
             route: app_admin_icon_unicon
 
-custom_menu:
+menu:
     icon: uil-bars
-    route: app_admin_custommenu_index
+    route: app_admin_menu_howto
 
 admin:
     type: title
