--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 APP_ENV=dev
-DATABASE_URL=mysql://root:rootpwd@127.0.0.1:3306/umbrella-skeleton
+DATABASE_URL=mysql://root:rootpwd@127.0.0.1:3306/umbrella-demo
 MAILER_URL=smtp://localhost
 APP_SECRET=a5e0ea3d611cded564d552092af6219e
 WEBPACK_DEV_SERVER_ENABLE=false
