--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,44 +1,22 @@
 <?php
+
+$finder = PhpCsFixer\Finder::create()
+    ->in(__DIR__.'/src');
+
 return PhpCsFixer\Config::create()
     ->setRules([
+        '@Symfony' => true,
+        '@DoctrineAnnotation' => true,
+        'phpdoc_summary' => false,
+        'no_unneeded_final_method' => false,
+        'no_superfluous_phpdoc_tags' => false,
+        'concat_space' => ['spacing' => 'none'],
+        'phpdoc_to_comment' => false,
+        'native_constant_invocation' => true,
+        'native_function_invocation' => ['include' => ['@compiler_optimized']],
         'array_syntax' => ['syntax' => 'short'],
-        'binary_operator_spaces' => ['align_double_arrow' => false, 'align_equals' => false],
-        'blank_line_after_namespace' => true,
-        'braces' => true,
-        'class_definition' => true,
-        'elseif' => true,
-        'encoding' => true,
-        'full_opening_tag' => true,
-        'function_declaration' => true,
-        'indentation_type' => true,
-        'line_ending' => true,
-        'lowercase_constants' => true,
-        'lowercase_keywords' => true,
-        'method_argument_space' => true,
-        'method_separation' => true,
-        'no_closing_tag' => true,
-        'no_empty_comment' => true,
-        'no_empty_phpdoc' => true,
-        'no_extra_consecutive_blank_lines' => true,
-        'no_spaces_inside_parenthesis' => true,
-        'no_trailing_whitespace' => true,
-        'no_trailing_whitespace_in_comment' => true,
-        //'ordered_class_elements' => ['order' => ['use_trait', 'constant_public', 'constant_protected', 'constant_private', 'property_public', 'property_protected', 'property_private', 'construct', 'destruct', 'magic', 'phpunit', 'method_public', 'method_protected', 'method_private']],
-        'ordered_class_elements' => false,
-        'ordered_imports' => ['sortAlgorithm' => 'length'],
-        'phpdoc_add_missing_param_annotation' => ['only_untyped' => true],
-        'phpdoc_align' => true,
-        'single_blank_line_at_eof' => true,
-        'single_class_element_per_statement' => true,
-        'single_import_per_statement' => true,
-        'single_line_after_imports' => true,
-        'single_quote' => true,
-        'visibility_required' => true,
-        'no_unused_imports' => true,
+        'ordered_imports' => ['sort_algorithm' => 'alpha'],
     ])
-    ->setFinder(
-        PhpCsFixer\Finder::create()
-            ->in(__DIR__ . '/vendor/umbrella/')
-            ->in(__DIR__ . '/src/')
-    )
-;
+    ->setRiskyAllowed(true)
+    ->setFinder($finder)
+    ->setCacheFile(__DIR__.'/var/.php_cs.cache');
