--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,7 @@
         "umbrella/makerbundle": "dev-master"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
         "phpstan/phpstan": "^0.12.25",
         "symfony/debug-pack": "*",
         "symfony/maker-bundle": "^1.21",
