--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -10,7 +10,7 @@ return PhpCsFixer\Config::create()
         'phpdoc_summary' => false,
         'no_unneeded_final_method' => false,
         'no_superfluous_phpdoc_tags' => false,
-        'concat_space' => ['spacing' => 'none'],
+        'concat_space' => ['spacing' => 'one'],
         'phpdoc_to_comment' => false,
         'native_constant_invocation' => true,
         'native_function_invocation' => ['include' => ['@compiler_optimized']],
