--- a/.github/workflows/php_cs_fixer.yml
+++ b/.github/workflows/php_cs_fixer.yml
@@ -1,12 +1,12 @@
 name: Php cs fixer
 
 on:
-  push:
-    branches:
-      - 'master'
-  pull_request:
-    paths:
-      - '**.php'
+  workflow_dispatch:
+    inputs:
+      commit_message:
+        description: 'Commit message'
+        default: 'Apply php-cs-fixer changes'
+        required: true
 
 jobs:
   php-cs-fixer:
@@ -21,4 +21,4 @@ jobs:
 
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
-          commit_message: Apply php-cs-fixer changes
+          commit_message: "${{ github.event.inputs.commit_message }}"
