--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -1,8 +1,7 @@
 <?php	
 
 $finder = PhpCsFixer\Finder::create()	
-    ->in(__DIR__.'/src')	
-    ->in(__DIR__.'/vendor/umbrella2');
+    ->in(__DIR__.'/src');
 
 return PhpCsFixer\Config::create()	
     ->setRules([	
@@ -20,4 +19,4 @@ return PhpCsFixer\Config::create()
     ])	
     ->setRiskyAllowed(true)	
     ->setFinder($finder)	
-    ->setCacheFile(__DIR__.'/var/.php_cs.cache'); 
+    ->setCacheFile(__DIR__.'/.php_cs.cache');
