--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss-loader": "^4.1.0",
     "sass-loader": "^10.1.0",
+    "style-loader": "^2.0.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4",
     "webpack-cli": "^4.2.0",
