--- a/.gitignore
+++ b/.gitignore
@@ -15,12 +15,8 @@
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
 
-###> liip/imagine-bundle ###
-/public/media/cache/
-###< liip/imagine-bundle ###
-
 ###> umbrella ###
-/public/umbrella-file/
+/public/uploads/
 ###< umbrella ###
 
 ###> webpack ###
@@ -42,3 +38,7 @@ yarn-error.log
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
