--- a/composer.json
+++ b/composer.json
@@ -7,33 +7,34 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "liip/imagine-bundle": "^2.2",
+        "liip/imagine-bundle": "^2.3",
         "sensio/framework-extra-bundle": "^5.5",
         "stof/doctrine-extensions-bundle": "^1.4",
-        "symfony/asset": "5.0.*",
-        "symfony/config": "5.0.*",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
-        "symfony/expression-language": "5.0.*",
+        "symfony/asset": "5.2.*",
+        "symfony/config": "5.2.*",
+        "symfony/console": "5.2.*",
+        "symfony/dotenv": "5.2.*",
+        "symfony/expression-language": "5.2.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.0.*",
-        "symfony/framework-bundle": "5.0.*",
-        "symfony/http-client": "5.0.*",
-        "symfony/intl": "5.0.*",
-        "symfony/lock": "5.0.*",
-        "symfony/mailer": "5.0.*",
+        "symfony/form": "5.2.*",
+        "symfony/framework-bundle": "5.2.*",
+        "symfony/http-client": "5.2.*",
+        "symfony/intl": "5.2.*",
+        "symfony/lock": "5.2.*",
+        "symfony/mailer": "5.2.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
-        "symfony/process": "5.0.*",
-        "symfony/security-bundle": "5.0.*",
+        "symfony/process": "5.2.*",
+        "symfony/security-bundle": "5.2.*",
         "symfony/serializer-pack": "*",
+        "symfony/string": "5.2.*",
         "symfony/swiftmailer-bundle": "^3.4",
-        "symfony/translation": "5.0.*",
+        "symfony/translation": "5.2.*",
         "symfony/twig-pack": "*",
-        "symfony/validator": "5.0.*",
-        "symfony/web-link": "5.0.*",
+        "symfony/validator": "5.2.*",
+        "symfony/web-link": "5.2.*",
         "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "5.0.*",
+        "symfony/yaml": "5.2.*",
         "umbrella2/adminbundle": "dev-master",
         "umbrella2/corebundle": "dev-master"
     },
@@ -86,7 +87,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "5.0.*"
+            "require": "5.2.*"
         }
     }
 }
