--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "jquery-slimscroll": "^1.3.8",
         "jquery-toast-plugin": "^1.3.2",
         "jquery-treegrid": "^0.3.0",
+        "js-cookie": "^2.2.1",
         "metismenu": "^3.0.6",
         "mustache": "^4.0.1",
         "popper.js": "^1.16.1",
