--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
         "symfony/process": "5.2.*",
+        "symfony/rate-limiter": "5.2.*",
         "symfony/security-bundle": "5.2.*",
         "symfony/serializer-pack": "*",
         "symfony/string": "5.2.*",
