--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,4 +1,5 @@
 security:
+    enable_authenticator_manager: true
     encoders:
         Symfony\Component\Security\Core\User\User:
             algorithm:        plaintext
@@ -10,20 +11,20 @@ security:
         ROLE_GODLIKE_ADMIN:   [ ROLE_ADMIN ]
 
     providers:
-        bo_provider:
+        admin_provider:
             chain :
-                providers: [bo_memory_provider, bo_umbrella_provider]
-        bo_memory_provider:
+                providers: [admin_memory_provider, admin_entity_provider]
+        admin_memory_provider:
             memory:
                 users:
                     umbrella:  { password: umbrella, roles: [ 'ROLE_GODLIKE_ADMIN']}
-        bo_umbrella_provider:
+        admin_entity_provider:
             id: Umbrella\AdminBundle\Security\UserProvider
 
     access_control:
-        - { path: ^/admin/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/password_request, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/admin/password_reset, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/login$, role: PUBLIC_ACCESS }
+        - { path: ^/admin/password_request, role: PUBLIC_ACCESS }
+        - { path: ^/admin/password_reset, role: PUBLIC_ACCESS }
         - { path: ^/admin, roles: ROLE_ADMIN }
 
     firewalls:
@@ -31,16 +32,14 @@ security:
             pattern:    ^/(_profiler|_wdt|css|js)
             security:   false
 
-        bo_firewall:
+        admin:
+            login_throttling: ~
             pattern: ^/admin
             user_checker: Umbrella\AdminBundle\Security\UserChecker
-            anonymous: ~
             entry_point: Umbrella\AdminBundle\Security\AuthenticationEntryPoint
-            form_login:
-                provider: bo_provider
-                login_path: umbrella_admin_login
-                check_path: umbrella_admin_login
-                default_target_path: app_admin_default_index
+            provider: admin_provider
+            guard:
+                authenticators:
+                    - Umbrella\AdminBundle\Security\LoginFormAuthenticator
             logout:
                 path: umbrella_admin_logout
-                target: umbrella_admin_login
