--- a/config/packages/umbrella.yaml
+++ b/config/packages/umbrella.yaml
@@ -1,23 +1,15 @@
 umbrella_core:
-  ckeditor:
-    configs:
-      custom:
-        toolbar:
-          - { name: links, items: [ 'Link', 'Unlink' ] }
-        uiColor: '#FEFEFE'
   file:
     flystorage: default.storage
     mappings:
       default.mapping:
         uri: /download/{storageName}/{name}
-      admin.mapping:
-        uri: /admin/file/{storageName}
 
 umbrella_admin:
   menu:
     file: "../config/menu/admin_sidebar.yml"
   theme:
-    name: "Umbrella demo"
+    name: "Admin"
   assets:
     script_entry: admin
     stylesheet_entry: admin
