--- a/.env
+++ b/.env
@@ -1,4 +1,7 @@
 APP_ENV=dev
 DATABASE_URL="sqlite:///%kernel.project_dir%/var/database.sqlite"
-MAILER_URL=null://localhost
 APP_SECRET=hb7nejndlxpvn7xi9vu7
+
+###> symfony/mailer ###
+MAILER_DSN=null://null
+###< symfony/mailer ###
