--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
     "private": true,
     "dependencies": {
         "@iconscout/unicons": "^3.0.6",
-        "@mdi/font": "^5.8.55",
-        "bootstrap": "^4.5.3",
-        "bootstrap-datepicker": "^1.9.0",
+        "@mdi/font": "^5.9.55",
+        "bootstrap": "^4.6.0",
         "ckeditor4": "^4.15.1",
-        "datatables.net": "^1.10.22",
-        "datatables.net-bs4": "^1.10.22",
-        "datatables.net-fixedheader": "^3.1.7",
-        "datatables.net-fixedheader-bs": "^3.1.7",
+        "datatables.net": "^1.10.23",
+        "datatables.net-bs4": "^1.10.23",
+        "datatables.net-fixedheader": "^3.1.8",
+        "datatables.net-fixedheader-bs4": "^3.1.8",
         "datatables.net-rowreorder": "^1.2.7",
-        "datatables.net-rowreorder-bs": "^1.2.7",
+        "datatables.net-rowreorder-bs4": "^1.2.7",
         "dragula": "^3.7.3",
-        "eonasdan-bootstrap-datetimepicker": "^4.17.47",
-        "jquery": "^3.5.1",
+        "flatpickr": "^4.6.9",
+        "jquery": "^3.6.0",
         "jquery-toast-plugin": "^1.3.2",
         "jquery-treegrid": "^0.3.0",
         "js-cookie": "^2.2.1",
@@ -26,14 +25,14 @@
         "simplebar": "^5.3.0"
     },
     "devDependencies": {
-        "@symfony/webpack-encore": "^1.1.1",
+        "@symfony/webpack-encore": "^0.31.0",
         "babel-plugin-transform-class-properties": "^6.24.1",
         "file-loader": "^6.0.0",
         "sass": "^1.32.8",
-        "sass-loader": "^11.0.0"
+        "sass-loader": "^9.0.1"
     },
     "scripts": {
-        "dev-server": "encore dev-server --port 9000 --host=0.0.0.0",
+        "dev-server": "encore dev-server --port 9000 --disable-host-check --host=0.0.0.0",
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress",
