--- a/config/menu/admin_sidebar.yml
+++ b/config/menu/admin_sidebar.yml
@@ -15,6 +15,8 @@ umbrella:
                     route: app_admin_datatable_draggable
                 editable:
                     route: app_admin_datatable_editable
+                tree:
+                    route: app_admin_datatable_tree
 
         forms:
             icon: uil-document-layout-center
