--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
         "dragula": "^3.7.3",
         "flatpickr": "^4.6.9",
         "jquery": "^3.6.0",
-        "jquery-toast-plugin": "^1.3.2",
-        "jquery-treegrid": "^0.3.0",
+        "jquery-treetable": "^3.2.0-1",
         "js-cookie": "^2.2.1",
         "metismenu": "^3.0.6",
         "mustache": "^4.0.1",
         "popper.js": "^1.16.1",
         "select2": "^4.0.13",
-        "simplebar": "^5.3.0"
+        "simplebar": "^5.3.0",
+        "toastr": "^2.1.4"
     },
     "devDependencies": {
         "@symfony/webpack-encore": "^0.31.0",
