--- a/config/packages/umbrella.yaml
+++ b/config/packages/umbrella.yaml
@@ -3,6 +3,7 @@ umbrella_core:
     flystorage: default.storage
 
 umbrella_admin:
+  home_route: app_admin_default_index
   menu:
     file: "../config/menu/admin_sidebar.yml"
   theme:
