--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,7 +1,6 @@
-umbrella_file_:
-  resource: "@UmbrellaCoreBundle/src/Controller/UmbrellaFileController.php"
-  type: annotation
-  prefix: /download
+umbrella_file:
+  path: /admin/download/{id}
+  controller: Umbrella\CoreBundle\Controller\UmbrellaFileController::downloadAction
 
 umbrella_admin_:
   resource: "@UmbrellaAdminBundle/config/routing.yml"
