add example of file displayed with liip/imaginebundle

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@
 npm-debug.log
 yarn-error.log
 ###< symfony/webpack-encore-bundle ###
+
 ###> Tools / Other ###
 /.idea/*
 *.DS_Store
@@ -30,3 +31,7 @@ yarn-error.log
 
 bin/deploy
 composer.lock
+
+###> liip/imagine-bundle ###
+/public/media/cache/
+###< liip/imagine-bundle ###
