--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.3",
         "league/flysystem-bundle": "^2.0",
+        "liip/imagine-bundle": "^2.6",
         "sensio/framework-extra-bundle": "^5.5",
         "stof/doctrine-extensions-bundle": "^1.4",
         "symfony/asset": "5.2.*",
