--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "@iconscout/unicons": "^3.0.6",
     "@mdi/font": "^5.9.55",
-    "bootstrap": "4.6.0",
+    "@popperjs/core": "^2.9.2",
+    "bootstrap": "^5.0.0",
     "ckeditor4": "^4.16.0",
     "datatables.net": "^1.10.24",
     "datatables.net-bs4": "^1.10.24",
@@ -21,9 +22,7 @@
     "flatpickr": "^4.6.9",
     "jquery": "^3.6.0",
     "jquery-treetable": "^3.2.0-1",
-    "metismenu": "^3.0.6",
     "mustache": "^4.2.0",
-    "popper.js": "^1.16.1",
     "select2": "^4.0.13",
     "simplebar": "^5.3.3",
     "toastr": "^2.1.4"
