--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "jquery-treetable": "^3.2.0-1",
     "mustache": "^4.2.0",
     "select2": "^4.0.13",
-    "simplebar": "^5.3.3",
-    "toastr": "^2.1.4"
+    "simplebar": "^5.3.3"
   },
   "scripts": {
     "dev-server": "encore dev-server --port 9000 --host=0.0.0.0 --no-firewall",
