--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "name": "umbrella2/umbrella-demo",
     "type": "project",
     "license": "MIT",
+    "minimum-stability": "beta",
     "require": {
         "php": ">=7.4",
         "ext-ctype": "*",
@@ -13,31 +14,31 @@
         "liip/imagine-bundle": "^2.6",
         "sensio/framework-extra-bundle": "^5.5",
         "stof/doctrine-extensions-bundle": "^1.4",
-        "symfony/asset": "5.2.*",
-        "symfony/config": "5.2.*",
-        "symfony/console": "5.2.*",
-        "symfony/dotenv": "5.2.*",
-        "symfony/expression-language": "5.2.*",
+        "symfony/asset": "5.3.*",
+        "symfony/config": "5.3.*",
+        "symfony/console": "5.3.*",
+        "symfony/dotenv": "5.3.*",
+        "symfony/expression-language": "5.3.*",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.2.*",
-        "symfony/framework-bundle": "5.2.*",
-        "symfony/http-client": "5.2.*",
-        "symfony/intl": "5.2.*",
-        "symfony/lock": "5.2.*",
-        "symfony/mailer": "5.2.*",
+        "symfony/form": "5.3.*",
+        "symfony/framework-bundle": "5.3.*",
+        "symfony/http-client": "5.3.*",
+        "symfony/intl": "5.3.*",
+        "symfony/lock": "5.3.*",
+        "symfony/mailer": "5.3.*",
         "symfony/monolog-bundle": "^3.1",
         "symfony/orm-pack": "*",
-        "symfony/process": "5.2.*",
-        "symfony/rate-limiter": "5.2.*",
-        "symfony/security-bundle": "5.2.*",
+        "symfony/process": "5.3.*",
+        "symfony/rate-limiter": "5.3.*",
+        "symfony/security-bundle": "5.3.*",
         "symfony/serializer-pack": "*",
-        "symfony/string": "5.2.*",
-        "symfony/translation": "5.2.*",
+        "symfony/string": "5.3.*",
+        "symfony/translation": "5.3.*",
         "symfony/twig-pack": "*",
-        "symfony/validator": "5.2.*",
-        "symfony/web-link": "5.2.*",
+        "symfony/validator": "5.3.*",
+        "symfony/web-link": "5.3.*",
         "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "5.2.*",
+        "symfony/yaml": "5.3.*",
         "umbrella2/adminbundle": "dev-master",
         "umbrella2/corebundle": "dev-master"
     },
@@ -95,7 +96,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "5.2.*"
+            "require": "5.3.*"
         }
     }
 }
