Update to stable release 5.3

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,8 @@ composer.lock
 ###> liip/imagine-bundle ###
 /public/media/cache/
 ###< liip/imagine-bundle ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
