--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -7,7 +7,7 @@ framework:
         handler_id: null
         cookie_secure: auto
         cookie_samesite: lax
-        save_path:   "%kernel.project_dir%/var/sessions/%kernel.environment%"
+        storage_factory_id: session.storage.factory.native
 
     php_errors:
         log: true
