--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "datatables.net-rowreorder-bs4": "^1.2.7",
     "dragula": "^3.7.3",
     "flatpickr": "^4.6.9",
+    "highlight.js": "^11.0.1",
     "jquery": "^3.6.0",
     "jquery-treetable": "^3.2.0-1",
     "mustache": "^4.2.0",
