--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "devDependencies": {
-    "@babel/eslint-parser": "^7.14.5",
+    "@babel/core": "^7.14.6",
+    "@babel/eslint-parser": "^7.14.7",
     "@symfony/webpack-encore": "^1.2.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
     "file-loader": "^6.0.0",
     "sass": "1.32.12",
     "sass-loader": "^11.0.1"
@@ -33,7 +34,7 @@
     "watch": "encore dev --watch",
     "build": "encore production --progress",
     "copy-ckeditor": "cp -R node_modules/ckeditor4 public",
-    "lint": "eslint vendor/umbrella2/corebundle/assets vendor/umbrella2/adminbundle/assets",
-    "lint-fix": "eslint vendor/umbrella2/corebundle/assets vendor/umbrella2/adminbundle/assets --fix"
+    "lint": "eslint assets",
+    "lint-fix": "eslint assets --fix"
   }
 }
