--- a/config/packages/umbrella_admin.yaml
+++ b/config/packages/umbrella_admin.yaml
@@ -1,8 +1,8 @@
 umbrella_admin:
-  home_route: app_admin_default_index
-  theme:
-    name: "Admin"
-    icon: "mdi mdi-umbrella"
+  app_name: "Admin"
+  menu:
+    options:
+      logo_route: app_admin_default_index
   assets:
     script_entry: admin
     stylesheet_entry: admin
