--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,30 +1,16 @@
 security:
     enable_authenticator_manager: true
     password_hashers:
-        Symfony\Component\Security\Core\User\InMemoryUser: 'plaintext'
         App\Entity\AdminUser: 'sodium'
 
     role_hierarchy:
         ROLE_ADMIN:           [ ROLE_USER ]
 
     providers:
-        admin_provider:
-            chain :
-                providers: [admin_memory_provider, admin_entity_provider]
-        admin_memory_provider:
-            memory:
-                users:
-                    umbrella:  { password: umbrella, roles: [ 'ROLE_ADMIN']}
         admin_entity_provider:
             entity:
                 class: App\Entity\AdminUser
                 property: email
-
-    access_control:
-        - { path: ^/admin/login$, role: PUBLIC_ACCESS }
-        - { path: ^/admin/password_request, role: PUBLIC_ACCESS }
-        - { path: ^/admin/password_reset, role: PUBLIC_ACCESS }
-        - { path: ^/admin, roles: ROLE_ADMIN }
 
     firewalls:
         dev:
@@ -36,7 +22,7 @@ security:
             pattern: ^/admin
             user_checker: Umbrella\AdminBundle\Security\UserChecker
             entry_point: Umbrella\AdminBundle\Security\AuthenticationEntryPoint
-            provider: admin_provider
+            provider: admin_entity_provider
             lazy: true
             form_login:
                 login_path: umbrella_admin_login
