Fix Synchro sms products + add Test case

--- a/.env
+++ b/.env
@@ -5,3 +5,8 @@ APP_SECRET=hb7nejndlxpvn7xi9vu7
 ###> symfony/mailer ###
 MAILER_DSN=null://null
 ###< symfony/mailer ###
+
+###> symfony/messenger ###
+MESSENGER_TRANSPORT_DSN=doctrine://default
+###< symfony/messenger ###
+
