--- a/composer.json
+++ b/composer.json
@@ -16,34 +16,35 @@
         "knplabs/knp-time-bundle": "^1.16",
         "phpdocumentor/reflection-docblock": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.4",
-        "symfony/asset": "5.3.*",
-        "symfony/config": "5.3.*",
-        "symfony/console": "5.3.*",
-        "symfony/dotenv": "5.3.*",
-        "symfony/expression-language": "5.3.*",
+        "symfony/asset": "^5.3|^6.0",
+        "symfony/config": "^5.3|^6.0",
+        "symfony/console": "^5.3|^6.0",
+        "symfony/dotenv": "^5.3|^6.0",
+        "symfony/error-handler": "^5.3|^6.0",
+        "symfony/expression-language": "^5.3|^6.0",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.3.*",
-        "symfony/framework-bundle": "5.3.*",
-        "symfony/http-client": "5.3.*",
-        "symfony/intl": "5.3.*",
-        "symfony/lock": "5.3.*",
-        "symfony/mailer": "5.3.*",
-        "symfony/messenger": "5.3.*",
+        "symfony/form": "^5.3|^6.0",
+        "symfony/framework-bundle": "^5.3|^6.0",
+        "symfony/http-client": "^5.3|^6.0",
+        "symfony/intl": "^5.3|^6.0",
+        "symfony/lock": "^5.3|^6.0",
+        "symfony/mailer": "^5.3|^6.0",
+        "symfony/messenger": "^5.3|^6.0",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/process": "5.3.*",
-        "symfony/property-access": "5.3.*",
-        "symfony/property-info": "5.3.*",
-        "symfony/proxy-manager-bridge": "5.3.*",
-        "symfony/rate-limiter": "5.3.*",
-        "symfony/security-bundle": "5.3.*",
-        "symfony/serializer": "5.3.*",
-        "symfony/string": "5.3.*",
-        "symfony/translation": "5.3.*",
-        "symfony/twig-bundle": "5.3.*",
-        "symfony/validator": "5.3.*",
-        "symfony/web-link": "5.3.*",
+        "symfony/process": "^5.3|^6.0",
+        "symfony/property-access": "^5.3|^6.0",
+        "symfony/property-info": "^5.3|^6.0",
+        "symfony/proxy-manager-bridge": "^5.3|^6.0",
+        "symfony/rate-limiter": "^5.3|^6.0",
+        "symfony/security-bundle": "^5.3|^6.0",
+        "symfony/serializer": "^5.3|^6.0",
+        "symfony/string": "^5.3|^6.0",
+        "symfony/translation": "^5.3|^6.0",
+        "symfony/twig-bundle": "^5.3|^6.0",
+        "symfony/validator": "^5.3|^6.0",
+        "symfony/web-link": "^5.3|^6.0",
         "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "5.3.*",
+        "symfony/yaml": "^5.3|^6.0",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "umbrella2/adminbundle": "dev-master",
@@ -57,13 +58,13 @@
         "phpstan/phpstan-doctrine": "^0.12.33",
         "phpstan/phpstan-symfony": "^0.12.25",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "^5.3",
-        "symfony/css-selector": "^5.3",
-        "symfony/debug-bundle": "^5.3",
+        "symfony/browser-kit": "^5.3|^6.0",
+        "symfony/css-selector": "^5.3|^6.0",
+        "symfony/debug-bundle": "^5.3|^6.0",
         "symfony/maker-bundle": "^1.21",
         "symfony/phpunit-bridge": "^5.2",
-        "symfony/stopwatch": "^5.3",
-        "symfony/web-profiler-bundle": "^5.3"
+        "symfony/stopwatch": "^5.3|^6.0",
+        "symfony/web-profiler-bundle": "^5.3|^6.0"
     },
     "config": {
         "preferred-install": {
@@ -108,7 +109,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "5.3.*"
+            "require": "^5.3|^6.0"
         }
     }
 }
