Add File FormType

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -15,3 +15,7 @@ services:
     App\Controller\:
         resource: '../src/Controller/'
         tags: ['controller.service_arguments']
+
+    App\Service\FileUploader:
+        arguments:
+            $targetDirectory: '%kernel.project_dir%/public/uploads'
