--- a/composer.json
+++ b/composer.json
@@ -15,35 +15,35 @@
         "knplabs/knp-time-bundle": "^1.16",
         "phpdocumentor/reflection-docblock": "^5.2",
         "stof/doctrine-extensions-bundle": "^1.4",
-        "symfony/asset": "5.4.0",
-        "symfony/config": "5.4.0",
-        "symfony/console": "5.4.0",
-        "symfony/dotenv": "5.4.0",
-        "symfony/error-handler": "5.4.0",
-        "symfony/expression-language": "5.4.0",
+        "symfony/asset": "^5.4",
+        "symfony/config": "^5.4",
+        "symfony/console": "^5.4",
+        "symfony/dotenv": "^5.4",
+        "symfony/error-handler": "^5.4",
+        "symfony/expression-language": "^5.4",
         "symfony/flex": "^1.3.1",
-        "symfony/form": "5.4.0",
-        "symfony/framework-bundle": "5.4.0",
-        "symfony/http-client": "5.4.0",
-        "symfony/intl": "5.4.0",
-        "symfony/lock": "5.4.0",
-        "symfony/mailer": "5.4.0",
-        "symfony/messenger": "5.4.0",
+        "symfony/form": "^5.4",
+        "symfony/framework-bundle": "^5.4",
+        "symfony/http-client": "^5.4",
+        "symfony/intl": "^5.4",
+        "symfony/lock": "^5.4",
+        "symfony/mailer": "^5.4",
+        "symfony/messenger": "^5.4",
         "symfony/monolog-bundle": "^3.1",
-        "symfony/process": "5.4.0",
-        "symfony/property-access": "5.4.0",
-        "symfony/property-info": "5.4.0",
-        "symfony/proxy-manager-bridge": "5.4.0",
-        "symfony/rate-limiter": "5.4.0",
-        "symfony/security-bundle": "5.4.0",
-        "symfony/serializer": "5.4.0",
-        "symfony/string": "5.4.0",
-        "symfony/translation": "5.4.0",
-        "symfony/twig-bundle": "5.4.0",
-        "symfony/validator": "5.4.0",
-        "symfony/web-link": "5.4.0",
+        "symfony/process": "^5.4",
+        "symfony/property-access": "^5.4",
+        "symfony/property-info": "^5.4",
+        "symfony/proxy-manager-bridge": "^5.4",
+        "symfony/rate-limiter": "^5.4",
+        "symfony/security-bundle": "^5.4",
+        "symfony/serializer": "^5.4",
+        "symfony/string": "^5.4",
+        "symfony/translation": "^5.4",
+        "symfony/twig-bundle": "^5.4",
+        "symfony/validator": "^5.4",
+        "symfony/web-link": "^5.4",
         "symfony/webpack-encore-bundle": "^1.8",
-        "symfony/yaml": "5.4.0",
+        "symfony/yaml": "^5.4",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
         "vich/uploader-bundle": "^1.18",
@@ -57,13 +57,13 @@
         "phpstan/phpstan-doctrine": "^0.12.33",
         "phpstan/phpstan-symfony": "^0.12.25",
         "phpunit/phpunit": "^9.5",
-        "symfony/browser-kit": "5.4.0",
-        "symfony/css-selector": "5.4.0",
-        "symfony/debug-bundle": "5.4.0",
+        "symfony/browser-kit": "^5.4",
+        "symfony/css-selector": "^5.4",
+        "symfony/debug-bundle": "^5.4",
         "symfony/maker-bundle": "^1.21",
         "symfony/phpunit-bridge": "^5.2",
-        "symfony/stopwatch": "5.4.0",
-        "symfony/web-profiler-bundle": "5.4.0"
+        "symfony/stopwatch": "^5.4",
+        "symfony/web-profiler-bundle": "^5.4"
     },
     "config": {
         "preferred-install": {
@@ -108,7 +108,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": "true",
-            "require": "5.4.0"
+            "require": "^5.4"
         }
     }
 }
