Change app name

--- a/config/packages/umbrella_admin.yaml
+++ b/config/packages/umbrella_admin.yaml
@@ -1,5 +1,5 @@
 umbrella_admin:
-  app_name: "Admin"
+  app_name: "Umbrella Admin"
   menu: App\Menu\AdminMenu
   notification:
     provider: App\Notification\AdminNotificationProvider
